[project]
name = "cerbos_example"
version = ""
description = ""
authors = [
    {name = "\"Cerbos Developers\"", email = "\"help@cerbos.dev\""},
]
dependencies = [
    "cerbos>=0.5.0",
    "SQLAlchemy>=1.4.40,<2.0",
    "fastapi>=0.81.0",
    "uvicorn>=0.18.3",
    "cerbos-sqlalchemy>=0.2.0",
]
requires-python = ">=3.8"
license = {text = "\"Apache-2.0\""}
[project.optional-dependencies]

[tool.pdm.dev-dependencies]
lint = [
    "black>=22.6.0",
    "isort>=5.10.1",
]
dev = [
    "ptpython>=3.0.20",
    "pylint>=2.15.10",
    "watchfiles>=0.18.1",
    "pytest>=7.2.1",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
demo = "python src/cerbos_example/main.py"

[tool.isort]
profile = 'black'


[tool.pylint.MASTER]
extension-pkg-whitelist = "pydantic"
jobs = 2

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "missing-function-docstring",
]

[tool.pylint.CODE_STYLE]
max-line-length = 88
